--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -66,7 +66,6 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: us-east-1
-          API_TAG: latest
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Get pulumi outputs
@@ -80,7 +79,7 @@ jobs:
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
 
-  deploy-app:
+  deploy-api:
     needs: [build-api, provision]
     uses: ./.github/workflows/deploy-ecs.yml
     with:
