--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -143,7 +143,7 @@ jobs:
 
   build-api:
     needs: [test-e2e]
-    if: github.ref == 'refs/heads/main'
+    # if: github.ref == 'refs/heads/main'
     uses: jbrunton/workflows/.github/workflows/build-image.yml@v1
     with:
       repo-name: jbrunton/chat-demo-api
@@ -165,7 +165,7 @@ jobs:
       url: https://chat-demo.staging.jbrunton-aws.com
     concurrency: staging
     needs: [build-api]
-    if: github.ref == 'refs/heads/main'
+    # if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     outputs:
       service: ${{ steps.pulumi-outputs.outputs.service }}
@@ -212,6 +212,7 @@ jobs:
 
   deploy-api-staging:
     needs: [build-api, provision-staging]
+    # if: github.ref == 'refs/heads/main'
     uses: ./.github/workflows/deploy-ecs.yml
     with:
       task-defn-arn: ${{ needs.provision-staging.outputs.taskDefinitionArn }}
@@ -278,6 +279,7 @@ jobs:
 
   deploy-api-production:
     needs: [build-api, provision-production]
+    # if: github.ref == 'refs/heads/main'
     uses: ./.github/workflows/deploy-ecs.yml
     with:
       task-defn-arn: ${{ needs.provision-production.outputs.taskDefinitionArn }}
