--- a/services/api/package.json
+++ b/services/api/package.json
@@ -10,8 +10,7 @@
   },
   "packageManager": "pnpm@9.9.0",
   "files": [
-    "dist",
-    "run.Dockerfile"
+    "dist"
   ],
   "scripts": {
     "prebuild": "rimraf dist",
