--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:base", "group:allNonMajor"],
+  "extends": ["config:recommended", "group:allNonMajor"],
   "packageRules": [
     {
       "matchFileNames": ["pulumi/**"],
