--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,9 @@
     "react-router-dom": "6.26.2"
   },
   "devDependencies": {
+    "@eslint/compat": "1.1.1",
+    "@eslint/eslintrc": "3.1.0",
+    "@eslint/js": "9.10.0",
     "@testing-library/jest-dom": "6.5.0",
     "@testing-library/react": "16.0.1",
     "@testing-library/user-event": "14.5.2",
@@ -55,6 +58,7 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.36.1",
     "eslint-plugin-react-hooks": "4.6.2",
+    "globals": "15.9.0",
     "jsdom": "22.1.0",
     "msw": "1.3.4",
     "prettier": "2.8.8",
