--- a/pulumi/package.json
+++ b/pulumi/package.json
@@ -11,6 +11,8 @@
     "format": "prettier --write --ignore-unknown ."
   },
   "devDependencies": {
+    "@eslint/eslintrc": "3.1.0",
+    "@eslint/js": "9.10.0",
     "@types/jest": "29.2.4",
     "@types/node": "16.18.10",
     "@typescript-eslint/eslint-plugin": "5.46.1",
@@ -18,6 +20,7 @@
     "eslint": "9.10.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.2.1",
+    "globals": "15.9.0",
     "jest": "29.3.1",
     "jest-mock-extended": "3.0.7",
     "prettier": "2.8.1",
