--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -142,7 +142,7 @@ jobs:
       - run: pnpm --filter api run test:mutate:data
 
   build-api:
-    needs: [test-e2e]
+    # needs: [test-e2e]
     uses: jbrunton/workflows/.github/workflows/build-image.yml@fix-skip-build
     with:
       repo-name: jbrunton/chat-demo-api
