--- a/.github/workflows/pulumi.yml
+++ b/.github/workflows/pulumi.yml
@@ -14,6 +14,7 @@ on:
         description: The environment to run against
         type: string
         required: false
+        default: null
 
 jobs:
   pulumi:
