--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -143,7 +143,7 @@ jobs:
 
   build-api:
     # needs: [test-e2e]
-    uses: jbrunton/workflows/.github/workflows/build-image.yml@fix-skip-build
+    uses: jbrunton/workflows/.github/workflows/build-image.yml@v1
     with:
       repo-name: jbrunton/chat-demo-api
       build-directory: services/api/isolate
