--- a/.github/workflows/pulumi-preview.yml
+++ b/.github/workflows/pulumi-preview.yml
@@ -20,7 +20,7 @@ on:
         required: true
 
 jobs:
-  pulumi:
+  preview:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
