--- a/.github/workflows/pulumi-deploy.yml
+++ b/.github/workflows/pulumi-deploy.yml
@@ -35,7 +35,7 @@ jobs:
         with:
           node-version-file: "package.json"
       - uses: pnpm/action-setup@v4
-      - name: build
+      - name: Build Client
         env:
           VITE_API_URL: ${{ inputs.api-url }}
         run: |
@@ -44,7 +44,7 @@ jobs:
       - run: pnpm install --ignore-workspace
         working-directory: pulumi
       - uses: pulumi/actions@v3
-        name: Pulumi
+        name: Deploy
         with:
           command: up
           stack-name: ${{ inputs.stack-name }}
