--- a/services/api/package.json
+++ b/services/api/package.json
@@ -105,6 +105,7 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.2.0",
     "typedoc": "0.26.7",
+    "typedoc-plugin-mermaid": "1.12.0",
     "typescript": "5.6.2"
   }
 }
